--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,20 @@
 version: '3.8'
+ 
 services:
  
- web:
-  container_name: core_shareclub
-  build: .
-  restart: always
-  env_file: ./Game2048/.env
-  volumes:
-    - .:/ShareClub
-    - static_volume:/ShareClub/static
-  depends_on:
-    - db  
-  ports:
-    - 80:8000
+  web:
+   container_name: core_game
+   build: .
+   restart: always
+   env_file: ./Game2048/.env
+   volumes:
+     - .:/Game2048
+     - static_volume:/Game2048/static
+ 
+   ports:
+     - 80:8000
  
  
  
 volumes:
- static_volume:
- postgres_data:
- nginx_secrets:
+  static_volume:
